examples/tests/invalid/panic.w
/*\
env:
  WINGC_DEBUG_PANIC: type checking
\*/
"I'm fine";
😱;
//^ panic during type checking
"Are you sure?";
